# study.gl

./: CMakeLists.txt  README.org  justfile
cmake/: pkg.cmake
glsl/: fragment.glsl  fragment2.glsl  vertex.glsl  vertex2.glsl
include/: CMakeLists.txt
include/lib/: CMakeLists.txt
include/lib/include/glad/: glad.h
include/lib/src/: glad.c
include/util/: CMakeLists.txt
include/util/include/: object.hpp  transform.hpp
include/util/include/data/: vertex.hpp
include/util/include/gfx/: debug.hpp  multitexture.hpp  shader.hpp  texture.hpp  textureunit.hpp
include/util/include/math/: gmath.hpp
include/util/include/time/: time.hpp  timehelper.hpp
include/util/src/: gfx_debug.cpp  multitexture.cpp  object.cpp  shader.cpp  stb_images.cpp  texture.cpp  time.cpp  timehelper.cpp  transform.cpp  vertex.cpp
src/: main.cpp  window.cpp  window.hpp
